gitops/charts/tt-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tt-resources-ingress
  namespace: tt-resources
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 5e.512.ch
    secretName: tt-resources-tls
  rules:
  - host: 5e.512.ch
    http:
      paths:
      - path: /2014(/|$)(.*)
        pathType: Prefix
        backend:
          service: 
            name: dnd-5e-2014-resources 
            port:
              number: 80
      - path: /2024(/|$)(.*)
        pathType: Prefix
        backend:
          service: 
            name: dnd-5e-2024-resources 
            port:
              number: 80
